# rust_firmware

./: README.md
cupiezo/: Cargo.toml  make_and_flash.sh  readme.md  rust-toolchain.toml
cupiezo/.cargo/: config.toml
cupiezo/rnd/: readme.md
cupiezo/rnd/esp32/: Cargo.toml
cupiezo/rnd/nodemcu/: Makefile.bos1901  Makefile.master  Makefile.slave  bos1901.cpp  bos1901_cyp.cpp  readme.md  spimaster.cpp  spislave.cpp
cupiezo/src/: blink.rs  main.rs  main_bak2.rs  main_bak3.rs
cupiezo/src/bos1901/: reg.rs
embassy/: Cargo.toml  build.rs  memory.x
embassy/.cargo/: config.toml
embassy/src/: main.rs
rust-pico-project-master/: spi.rs
