[package]
edition = "2021"
name    = "cupiezo"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

# [target.thumbv6m-none-eabi]
# runner = "probe-run --chip RP2040"

[dependencies]
cortex-m         = "0.7.7"
cortex-m-rt      = "0.7.3"
critical-section = "1.1.2"
defmt            = "0.3.5"
defmt-rtt        = "0.4.0"
embedded-hal     = "0.2.7"
embedded-time    = "0.12.1"
panic-halt       = "0.2.0"
panic-probe      = "0.3.1"
rp2040-boot2     = "0.3.0"
rp2040-hal       = "0.9.0"
wifi-nina        = "0.1.2"