[package]
edition = "2021"
name    = "cupiezo"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

# [target.thumbv6m-none-eabi]
# runner = "probe-run --chip RP2040"

[dependencies]
# anyhow           = { default-features = false, version = "1.0.75", features = [] }
cortex-m       = { default-features = true, version = "0.7.7", features = [] }
cortex-m-rt    = { default-features = true, version = "0.7.3", features = [] }
defmt          = { default-features = true, version = "0.3.5", features = [] }
defmt-rtt      = { default-features = true, version = "0.4.0", features = [] }
embedded-alloc = { default-features = true, version = "0.5.0", features = [] }
embedded-hal   = { default-features = true, version = "0.2.7", features = [] }
embedded-time  = { default-features = true, version = "0.12.1", features = [] }
fugit          = { default-features = true, version = "0.3.7", features = [] }
panic-halt     = { default-features = true, version = "0.2.0", features = [] }
panic-probe    = { default-features = true, version = "0.3.1", features = [] }
rp2040-boot2   = { default-features = true, version = "0.3.0", features = [] }
# rp-pico        = { default-features = true, version = "0.8.0", features = ["critical-section-impl"] }
# rp2040-hal     = { default-features = true, version = "0.9.0", features = ["critical-section-impl"] }
# wifi-nina      = { default-features = true, version = "0.1.2", features = [] }

arduino_nano_connect = { default-features = true, version = "0.6.0", features = [] }
cortex-m-rtic        = { default-features = true, version = "1.1.4", features = [] }
rp2040-monotonic     = { default-features = true, version = "1.3.0", features = [] }
usb-device           = { default-features = true, version = "0.2.9", features = [] }
usbd-serial          = { default-features = true, version = "0.1.1", features = [] }
