[package]
edition = "2021"
name    = "embassy"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

# cargo build/run
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

# cargo build/run --release
[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false

[dependencies]

cortex-m        = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt     = { version = "0.7.3", features = [] }
defmt           = { version = "0.3.5", features = [] }
defmt-rtt       = { version = "0.4.0", features = [] }
embassy-futures = { git = "https://github.com/sanjeevprasad/embassy", features = [] }
embassy-rp      = { git = "https://github.com/sanjeevprasad/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver"] }
embassy-time    = { git = "https://github.com/sanjeevprasad/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb     = { git = "https://github.com/sanjeevprasad/embassy", features = ["defmt"] }
panic-probe     = { version = "0.3.1", features = [] }
# 
embassy-executor = { git = "https://github.com/sanjeevprasad/embassy", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }

# rp2040-boot2    = { version = "0.3.0", features = [] }